<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/Background"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"        >

        <Button
            android:id="@+id/button_1"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/boost_up_menu"
            style="@style/Button_menu"
            android:layout_marginBottom="5dp"   />

        <Button
            android:id="@+id/button_2"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/sugaring_menu"
            style="@style/Button_menu"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/barber_menu"
            style="@style/Button_menu"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/button_3"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/price_menu"
            style="@style/Button_menu"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/contacts_menu"
            style="@style/Button_menu"
            android:layout_marginBottom="5dp"
            />

    </GridLayout>

</RelativeLayout>
</ScrollView>
