<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.denis.uhb.Contacts"
    style="@style/Background">

    <Button
        style="@style/ButtonTheme"
        android:text="@string/button_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_call"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        />
    <Button
        style="@style/ButtonTheme"
        android:text="@string/button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_map"
        android:layout_below="@+id/button_call"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contacts"
        android:id="@+id/textView4"
        style="@style/name_page"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Adress"
        android:id="@+id/textView11"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Contacts"
        android:id="@+id/textView9"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />


</RelativeLayout>
