<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.denis.uhb.Feedback"
    style="@style/Background"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_feedback"
        android:id="@+id/textView3"
        style="@style/name_page"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/feedback"
        android:id="@+id/textView10"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignWithParentIfMissing="false"
        android:textColor="#ffffffff"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:text="@string/feedback_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_send"
        style="@style/ButtonTheme"
        android:layout_marginTop="10dp"/>



</LinearLayout>