<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="16dp"
    tools:context="com.example.denis.updatehairbody.boostup"
    style="@style/Background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_boostup"
        android:id="@+id/textView"
        style="@style/name_page"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:srcCompat="@drawable/boostup"
        android:id="@+id/imageView4"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boost_up"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        style="@style/text_content_page"
        android:layout_alignWithParentIfMissing="false"
        android:scrollHorizontally="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"/>

    <Button
        style="@style/ButtonTheme"
        android:text="@string/button_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_price"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"  />

</RelativeLayout>
</ScrollView>
