<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.denis.updatehairbody.Sugaring"
    style="@style/Background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_sugaring"
        android:id="@+id/textView3"
        style="@style/name_page"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:srcCompat="@drawable/shugaring"
        android:id="@+id/imageView2"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugaring"
        android:id="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        style="@style/text_content_page"
        android:layout_alignWithParentIfMissing="false"
        android:textColor="#ffffffff"
        android:layout_below="@+id/imageView2"
        android:scrollHorizontally="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"/>

    <Button
        style="@style/ButtonTheme"
        android:text="@string/button_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_price"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"  />



</RelativeLayout>
</ScrollView>