<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.denis.uhb.Price"
    style="@style/Background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_price"
        android:id="@+id/textView5"
        style="@style/name_page"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:id="@+id/tableLayout"
        android:layout_marginTop="5dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Буст АП"
                android:id="@+id/textView6"
                android:layout_column="0"
                android:layout_weight="1"
                android:textColor="#ffffffff"
                android:textIsSelectable="false"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="5000 руб."
                android:id="@+id/textView7"
                android:layout_column="1"
                android:layout_weight="1"
                android:textColor="#ffffffff"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Sugaring"
                android:id="@+id/textView8"
                android:layout_column="1"
                android:layout_weight="1"
                android:textColor="#ffffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="10000 руб."
                android:id="@+id/textView9"
                android:layout_column="0"
                android:layout_weight="1"
                android:textColor="#ffffffff"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

    </TableLayout>
    <Button
        style="@style/ButtonTheme"
        android:text="@string/button_to_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_master"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
